--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 jwtSecret=mYnu`ej2qaBZr9%%a,.[vVv"T:GW,KzG2<c
 jwtExpirationInMs=604800000
-spring.mongodb.uri=mongodb+srv://m220student:m220password@xxxxxxxxx.mongodb.net/admin?retryWrites=true&maxPoolSize=50
+spring.mongodb.uri=mongodb+srv://m220student:m220password@xxxxxxxxx.mongodb.net/admin?retryWrites=true&maxPoolSize=50&connectTimeoutMS=2000
 spring.mongodb.database=mflix
 server.port=5000
 logging.level.api.controllers=DEBUG
